controllers/grafana/assets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-monitoring-grafana
  labels:
    platform.monitoring.app: grafana
    app.kubernetes.io/component: grafana
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/managed-by: monitoring-operator
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: ""
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Grafana'
spec:
  tls: ~
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
